# tolerant

./: .gitignore  Dockerfile  Makefile  README.md  USAGE.md  calculateTotalPrice.ts  cleanup.sh  docker-compose.yml  quick-start.sh  requirements.txt  run-experiment.sh  run_benchmark.sh  run_experiments.sh  test-chaos.sh
ad/: main.py
analysis/: benchmark_analysis.ipynb  requirements.txt
analysis/.ipynb_checkpoints/: benchmark_analysis-checkpoint.ipynb
benchmarks/jmeter/: order-load-test.jmx
benchmarks/scenarios/: failure-injection.sh
benchmarks/scripts/: analyze-results.sh  create-jmeter-test.sh  run-all-profiles.sh  run-benchmark.sh
cart/: main.py
chat_backend/: bun.lockb  package.json  tsconfig.json
chat_backend/models/: api.ts
checkout/: main.py
component/: package.json  tailwind.config.js
currency/: main.py
datastructures/: Arrays.ts  Linkedlists.ts  Queues.ts  Stack.ts
email/: main.py
env/: baseline.env  baseline_failures.env  circuit_breaker.env  circuit_breaker_failures.env
frontend/: main.py
infrastructure/: docker-compose-monitoring.yml  docker-compose.yml
loadgenerator/: Dockerfile  locustfile.py  requirements.txt
monitoring/: prometheus.yml
payment/: main.py
productcatalog/: main.py
recommendation/: main.py
redux/: package-lock.json  package.json
redux-project/: package-lock.json  package.json
services/analytics-service/: CMakeLists.txt  Dockerfile
services/analytics-service/src/: main.cpp
shipping/: main.py
tests/: test_circuit_breaker.py  test_frontend_integration.py
todo/: package-lock.json  package.json
(+236 files in other folders)
